# clisto-service

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile-prod  alembic.ini  example.env  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/admin/: auth_provider.py
backend/app/assets/css/: main.css
backend/app/assets/js/: categories-toggler.js  functions.js
backend/app/db/: base.py  dal.py  session.py
backend/app/emails/: utils.py
backend/app/emails/services/: mail.py  smtp.py
backend/app/files/: exceptions.py  services.py
backend/app/jwt/: exceptions.py  service.py
backend/app/modules/appointments/: dal.py  forms.py  models.py  routes.py
backend/app/modules/auto_maintenance/: __init__.py  dal.py  models.py  routes.py  schemas.py
backend/app/modules/pages/: router.py  routes.py  schemas.py
backend/app/modules/user/: models.py
backend/app/modules/users/: dal.py  exceptions.py  models.py  schemas.py
backend/app/static/css/: main.css
backend/app/static/js/: functions.js  overlay.js  set-navs-nums.js
backend/app/storage/: services.py
backend/app/template_engine/: services.py  template_engine.py
backend/app/templates/: main.html
backend/migrations/: env.py
backend/migrations/versions/: 2023_09_26_2104-8216f64dc141_.py  2023_09_27_1355-a6beb98eedd9_.py  2023_10_03_1546-0eca352c170c_.py  2023_10_04_2300-08948fb606c5_.py  2023_10_05_1503-9408aa945990_.py  2023_10_12_2019-3903810effc5_.py
backend/scripts/: backend.sh
(+20 files in other folders)
