[tool.poetry]
name = "clisto-service-backend"
version = "0.1.0"
description = ""
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}
SQLAlchemy = "^2.0.21"
asyncpg = "^0.28.0"
starlette-admin = "^0.11.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
sqlalchemy-file = "^0.5.0"
pillow = "^10.0.1"
fasteners = "^0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
alembic = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']


[tool.isort]
profile = "black"
line_length = 88
force_grid_wrap = 2
include_trailing_comma = true